--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -1,37 +1,30 @@
+body {
+	background: rgba(162,161,157,0.6);
+}
+.container>h6 {
+	font-size: 66px;
+	text-align: center;
+	text-shadow: 1px 1px 8px grey;
+}
+.top-span {
+	background: white;
+	height: 500px;
+	margin-bottom: 30px;
+}
 .content {
   margin-top: 50px;
 }
-.undecorated-link:hover {
-  text-decoration: none;
+.subject-box {
+  padding: 10px; 
+  text-align: center;
 }
-[ng\:cloak],
-[ng-cloak],
-[x-ng-cloak],
-.ng-cloak,
-.x-ng-cloak {
-  display: none !important;
+.thumbnail {
+  box-shadow: 1px 1px 8px black;
+  -webkit-transition: all 0.5s ease;
+          transition: all 0.5s ease;
 }
-.header-profile-image {
-  opacity: 0.8;
-  height: 28px;
-  width: 28px;
-  border-radius: 50%;
-  margin-right: 5px;
-}
-.open .header-profile-image,
-a:hover .header-profile-image {
-  opacity: 1;
-}
-.user-header-dropdown-toggle {
-  padding-top: 11px !important;
-  padding-bottom: 11px !important;
-}
-.error-text {
-  display: none;
-}
-.has-error .help-block.error-text {
-  display: block;
-}
-.has-error .help-inline.error-text {
-  display: inline;
+.thumbnail:hover {
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1);
 }
