--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,6 +1,8 @@
 <div class="content" ng-controller="MainController">
     <div class="container-fluid top-span">
-        test
+        <div class="vertical-center"> 
+            <img class="logo" src="modules/core/client/img/brand/logo2.jpg" alt="">
+        </div>
     </div>
     <div class="container">
         <h6>Topics</h6>
