--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -1,30 +1,51 @@
 body {
-	background: rgba(162,161,157,0.6);
+    background: rgba(162, 161, 157, 0.6);
 }
+
+.vertical-center {
+    position: relative;
+    top: 40%;
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
+}
+
+.logo {
+    width: 30%;
+    height: 60%;
+    margin-right: 50%;
+}
+
 .container>h6 {
-	font-size: 66px;
-	text-align: center;
-	text-shadow: 1px 1px 8px grey;
+    font-size: 66px;
+    text-align: center;
+    text-shadow: 1px 1px 8px grey;
 }
+
 .top-span {
-	background: white;
-	height: 500px;
-	margin-bottom: 30px;
+    background: white;
+    height: 750px;
+    margin-bottom: 30px;
+    text-align: center;
 }
+
 .content {
-  margin-top: 50px;
+    margin-top: 50px;
 }
+
 .subject-box {
-  padding: 10px; 
-  text-align: center;
+    padding: 10px;
+    text-align: center;
 }
+
 .thumbnail {
-  box-shadow: 1px 1px 8px black;
-  -webkit-transition: all 0.5s ease;
-          transition: all 0.5s ease;
+    box-shadow: 1px 1px 8px black;
+    -webkit-transition: all 0.5s ease;
+    transition: all 0.5s ease;
 }
+
 .thumbnail:hover {
-  -webkit-transform: scale(1.1);
-      -ms-transform: scale(1.1);
-          transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
 }
