--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
   <base href="/">
-  <title>Biotility</title>
+  <title>{{title}}</title>
   <meta name="description" content="{{description}}">
   <meta name="fragment" content="!">
 
@@ -29,7 +29,7 @@
   <meta name="twitter:image" content="{{url}}modules/core/img/brand/logo.png">
 
   <!-- Fav Icon -->
-  <link href="{{url}}{{favicon}}" rel="shortcut icon" type="image/x-icon">
+  <link href="modules/core/client/img/brand/favicon_b.ico" rel="shortcut icon" type="image/x-icon">
 
   <!-- Application CSS Files -->
   {% for cssFile in cssFiles %}<link rel="stylesheet" href="{{cssFile}}">{% endfor %}
