button to direct to quiz page

--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -17,5 +17,8 @@
                 </div>
             </div>
         </div>
+        <div class = "row" >
+            <button ui-sref="quiz"> Sample Quizes </button>
+        </div>
     </div>
 </div>
