--- a/modules/core/client/views/quizTemplate.client.view.html
+++ b/modules/core/client/views/quizTemplate.client.view.html
@@ -1,14 +1,10 @@
-<section ng-controller="QuizController">
-<div class = "content">
+<div class = "content" ng-controller = "QuizController">
 </br>
 </br>
 	<div class = "container" >
 		  <div class = "col-md-10 col-md-offset-1" style = "border-style: solid;">
-	      <div class = "row" ng-repeat = "n in [1, 2, 3, 4] track by $index">
-	        <h1> 
-	          {{n}}
-	        </h1>
-	      </div>
+	    
+	      	<div> Question is: {{arr[index].q}}</div>
 			<div class = "col-md-offset-1">
 				<div class = "row">
 				  <div class="radio">
@@ -25,12 +21,9 @@
 				  </div>
 				</div>
 			</div>
+			<button class = "btn" ng-click="increment()">Submit</button>
 
-	      <div class = "row">
-	        <button class = "btn-lg" ui-sref="newPage" >Button 1 </button>
-	      </div>
 
 	  </div>
 	</div>
 </div>
-</section>
