Added answers to quiz feature

--- a/modules/core/client/views/quizTemplate.client.view.html
+++ b/modules/core/client/views/quizTemplate.client.view.html
@@ -8,20 +8,20 @@
 			<div class = "col-md-offset-1">
 				<div class = "row">
 				  <div class="radio">
-				    <label><input type="radio" name="answer">Option 1</label>
+				    <label><input type="radio" name="answer">{{arr[index].a1}}</label>
 				  </div>
 				  <div class="radio">
-				    <label><input type="radio" name="answer">Option 2</label>
+				    <label><input type="radio" name="answer">{{arr[index].a2}}</label>
 				  </div>
 				   <div class="radio">
-				    <label><input type="radio" name="answer">Option 1</label>
+				    <label><input type="radio" name="answer">{{arr[index].a3}}</label>
 				  </div>
 				  <div class="radio">
-				    <label><input type="radio" name="answer">Option 2</label>
+				    <label><input type="radio" name="answer">{{arr[index].a4}}</label>
 				  </div>
 				</div>
 			</div>
-			<button class = "btn" ng-click="increment()">Submit</button>
+			<button class = "btn" ng-click="increment()">Next</button>
 
 
 	  </div>
