Generalized quiz picker (now put in right location)

--- a/modules/core/client/views/quizpicker.client.view.html
+++ b/modules/core/client/views/quizpicker.client.view.html
@@ -1,4 +1,9 @@
 
+ <div align="left">
+ <p> a href="homepage">home </a><span class="glyphicon glyphicon-chevron-right"></span>{{Current Page}}</p>    
+ </div>
+
+ 
 <div class="jumbotron text-center">
     <!--change this to show the subject name-->
     <h1>{{Subject Name}}</h1>
@@ -16,9 +21,9 @@
           <div class="col-md-6">
             <!--put subject picture here along with link-->
          <a href="{{resourcespage.html}}" class="thumbnail home-thumb">
-        <img src="{{picture of resources here}}" alt="Resources Picture">
+        <img src="Biotility/imgs/resources.jpg" alt="Resources Picture">
          </a>
         <h3>Resources</h3>
         </div>
     </div>
-    
+
