--- a/modules/core/client/views/quizpicker.client.view.html
+++ b/modules/core/client/views/quizpicker.client.view.html
@@ -1,4 +1,4 @@
-<div class="quizSelect" ng-controller="MainController">
+<div class="content" ng-controller="MainController">
  <div align="left">
  <p> <a href="modules/core/client/views/home.client.view.html">home</a>
  </div>
