--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -8,7 +8,7 @@
         <h6>Topics</h6>
         <div class="row">
             <div class="col-sm-3 subject-box" ng-repeat="subject in subjects track by $index">
-                <div class="thumbnail">
+                <div class="thumbnail subject-img">
                     <img ng-src="{{subject.img}}" alt="" class="img-responsive">
                     <div class="caption">
                         <h3>{{question.q}}</h3>
