--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -53,6 +53,14 @@ body {
     transition: all 0.5s ease;
 }
 
+.thumbnail.prequiz-thumb {
+    height: 361px;
+    width: 638px;
+}
+h3.text-center{
+text-align: center;
+}
+
 .thumbnail:hover {
     -webkit-transform: scale(1.1);
     -ms-transform: scale(1.1);
