--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -11,8 +11,8 @@
                 <div class="thumbnail">
                     <img ng-src="{{subject.img}}" alt="" class="img-responsive">
                     <div class="caption">
-                        <h3>{{subject.name}}</h3>
-                        <p>{{subject.description}}</p>
+                        <h3>{{question.q}}</h3>
+                        <p>{{question.answer_1}}</p>
                     </div>
                 </div>
             </div>
