Login and Registration Pages 1.0

--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -3,7 +3,7 @@
         Logout
     </div>
     <div ng-hide="authentication.user" class="navbar-brand pull-right">
-        Login
+   	 <a data-ui-sref="authentication.signin">Login</a>
     </div>
       <a ng-hide="authentication.user" href="#"><img src="modules/core/client/img/user/carl.png" alt="" class="img-circle user-pic pull-right"> </a>
 
