--- a/modules/users/client/views/authentication/signup.client.view.html
+++ b/modules/users/client/views/authentication/signup.client.view.html
@@ -1,5 +1,5 @@
 <div ng-controller="AuthenticationController">
-    <div class="row">
+        <div class="row">
         	<div class="col-md-2 col-md-offset-3 text-right">
             	<p>First Name: </p>
             </div>
@@ -59,20 +59,23 @@
             	<p>Courses: </p>
             </div>
             <div class = "col-md-2">
-            	<select>
+                <div ng-repeat = "course in courses">
+                <select>
                 	  <option selected disabled>Select Course</option>
                       <option value="class1">Class 1</option>
                       <option value="class2">Class 2</option>
                       <option value="class3">Class 3</option>
                       <option value="class4">Class 4</option>
                  </select>
-                 <button type="button" class="btn btn-default">
+                 </div>
+                 <button type="button" class="btn btn-default" ng-click = "courses.push({})">
        				 +
     			</button>
             </div>
+
         </div>
         
-  	</div>
+
     
     <!-- log-in button -->
     <div class="topmargin-10" style="text-align:center;">
