--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -7,7 +7,7 @@
     <div class="container">
         <h6>Topics</h6>
         <div class="row">
-            <div class="col-sm-3 subject-box" ng-repeat="subject in subjects track by $index" ng-click="onClicked()">
+            <div class="col-sm-3 subject-box" ng-repeat="subject in subjects track by $index" ng-click="onClicked(subject)">
                 <div class="thumbnail subject-img">
                     <img ng-src="{{subject.img}}" alt="" class="img-responsive">
                     <div class="caption">
