Subject Schema; Registration page now shows same subject's names as data; setup to make register click submit proper data.

--- a/modules/users/client/views/authentication/signup.client.view.html
+++ b/modules/users/client/views/authentication/signup.client.view.html
@@ -1,5 +1,5 @@
 <div ng-controller="AuthenticationController">
-	<div class = "row">
+	<div class = "row ">
         	<div class="col-md-2 col-md-offset-5 text-left">
             	<h1>Sign-Up<br></h1>
             </div>
@@ -97,7 +97,7 @@
     
     <!-- log-in button -->
     <div class="topmargin-10" style="text-align:center;">
-    	<a class="btn btn-default" href="">
+    	<a class="btn btn-default" ng-click ="" href="">
        	 	Register
     	</a>
     </div>
