--- a/modules/core/client/views/quizpicker.client.view.html
+++ b/modules/core/client/views/quizpicker.client.view.html
@@ -22,7 +22,7 @@
         </a>
           <div class="col-md-6">
             <!--put subject picture here along with link-->
-         <a href="" class ="text-center">
+         <a ui-sref="resources" class ="text-center">
          <div class="button big-btn" ><h1>RESOURCES</h1>Click here to view resources on the select topic</div>
          </a>
         </div>
