added Quiz Results page

--- a/modules/core/client/views/quizTemplate.client.view.html
+++ b/modules/core/client/views/quizTemplate.client.view.html
@@ -21,7 +21,7 @@
 				</div>
 			</div>
 			<button class = "btn" ng-click="increment()" ng-hide = "isDone">Next</button>
-			<button class = "btn" ui-sref = "quizpicker" ng-show = "isDone">Finish!</button>
+			<button class = "btn" ui-sref = "quiz-results" ng-show = "isDone">Finish!</button>
 
 	  </div>
 	</div>
