Nested States, some fixes for bread crumb

--- a/modules/core/client/views/resources.client.view.html
+++ b/modules/core/client/views/resources.client.view.html
@@ -1,4 +1,4 @@
-<div class="content" ng-controller="QuizPickerController">
+<div class="content" ng-controller="SubjectController">
  
 
 <div class="container">
@@ -6,7 +6,7 @@
     <div align="left">
   <a ui-sref="home">home</a>
     <span class="glyphicon glyphicon-chevron-right"></span>
-    <a ui-sref="quizpicker">{{breadcrum}}</a>
+    <a ui-sref="subject">{{breadcrum}}</a>
     <span class="glyphicon glyphicon-chevron-right"></span>
     resources
 
