--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,4 +1,4 @@
-<div class="content" ng-controller="MainController">
+<div class="margin-top-50 content-main" ng-controller="MainController">
     <div class="container-fluid top-span">
         <div class="vertical-center"> 
             <img class="logo" src="modules/core/client/img/brand/logo2.jpg" alt="">
@@ -18,4 +18,7 @@
             </div>
         </div>
     </div>
+
+    <div class="text-center">&copy; Biotility, 20XX-2015.</div>
+    
 </div>
