--- a/modules/core/client/views/quizTemplate.client.view.html
+++ b/modules/core/client/views/quizTemplate.client.view.html
@@ -1,4 +1,4 @@
-<div class = "content" ng-controller = "QuizController">
+<div ui-view class = "margin-top-50" ng-controller = "QuizController">
 </br>
 </br>
 	<div class = "container" >
@@ -21,7 +21,7 @@
 				</div>
 			</div>
 			<button class = "btn" ng-click="increment()" ng-hide = "isDone">Next</button>
-			<button class = "btn" ui-sref = "quiz-results" ng-show = "isDone">Finish!</button>
+			<button class = "btn" ui-sref = "subject.quiz.quiz-results" ng-show = "isDone">Finish!</button>
 
 	  </div>
 	</div>
