--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -135,5 +135,19 @@
 	background-color: #BBB;
 	border-radius: 25px;
 	padding: 40px;
+}
 
+.home{
+	font-family: Verdana, Geneva, sans-serif;	
+}
+
+.mh{
+	margin-top: -10px;
+	font-size: 30px;
+	font-style: bold;
+	margin-bottom: 10px;
+}
+
+.ms{
+		
 }
