fixed prequiz page a little

--- a/modules/core/client/views/subject.client.view.html
+++ b/modules/core/client/views/subject.client.view.html
@@ -1,4 +1,7 @@
 <div class="margin-top-50" ui-view ng-controller="SubjectController">
+    <div class="header-space">
+        <!-- -->
+    </div>
     <div class="container">
         <div class="jumbotron text-center">
             <div align="left">
