--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -1,4 +1,9 @@
 
+@font-face {
+    font-family: roundedElegance;
+    src: url(/modules/core/client/img/font/rounded_elegance-webfont.woff);
+}
+
 /*----header----*/
 .navbar {
     height: 50px;
@@ -137,17 +142,47 @@
 	padding: 40px;
 }
 
-.home{
+.head{
+	font-family: roundedElegance, Verdana, sans-serif;
+}
+
+.sub{
 	font-family: Verdana, Geneva, sans-serif;	
 }
 
 .mh{
-	margin-top: -10px;
+	margin-top: 0px;
 	font-size: 30px;
 	font-style: bold;
 	margin-bottom: 10px;
+	color: black;
+}
+
+.mhh{
+	margin-top: 20px;
+	margin-bottom: 10px;
+	font-size: 20px;
+	font-style: bold;
+	color: black;
 }
 
 .ms{
-		
+	color: #262626;	
+	font-size: 13px;
+}
+
+.himg{
+    box-shadow: 6px 6px 5px #787878;
+	margin-top: 30px;
+}
+
+.top-50{
+	margin-top: 50px;
+}
+
+.btn-default{
+	width: 150px;
+	height: 40px;
+	font-family: Verdana, Geneva, sans-serif;
+	font-size: 14px;
 }
