--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -6,18 +6,30 @@
   <div class="container">
 	  <div class="main-head">
       	<div class="row">
-        	<div class="col-md-7">
-            		<div class="home mh">
-            	About the BACE
-            	</div>
-            <div class="home ms">
+        	<div class="col-md-9">
+            		<div class="head mh">
+            			About the BACE
+            		</div>
+            		<div class="sub ms">
             The Biotechnician Assistant Credentialing Exam (BACE) is an industry-recognized exam designed to assess core skills and knowledge sets identified by industry, and represented within the academic and performance standards of Florida’s secondary Biotechnology program. The test has been vetted by the state’s industry organization BioFlorida, representing representing more than 3,000 companies and research organizations in the biotechnology, pharmaceuticals, medical devices and bioagriculture sectors.
-            The Biotechnician Assistant Credentialing Exam (BACE) is offered by Biotility at The University of Florida’s Center of Excellence for Regenerative Health Biotechnology (UF CERHB). The exam was developed to reflect competencies and skills outlined by the performance and academic standards of Florida’s secondary Industrial Biotechnology Program (#8736000), which are in turn based on Florida’s industry-described requirements necessary for this entry-level position. Students will be issued a Biotechnician Assistant credential from Biotility for successful completion of both the online and practical components of the exam. Schools may use the BACE for the end-of-program validation required by the Career and Professional Education (CAPE) Act.
+            		</div>
+                    <div class="head mhh">
+                    	About the Biotechnology Certification Program
+                    </div>
+                    <div class="sub ms">
+						The Biotechnician Assistant Credentialing Exam (BACE) is offered by Biotility at The University of Florida’s Center of Excellence for Regenerative Health Biotechnology (UF CERHB). The exam was developed to reflect competencies and skills outlined by the performance and academic standards of Florida’s secondary Industrial Biotechnology Program (#8736000), which are in turn based on Florida’s industry-described requirements necessary for this entry-level position. Students will be issued a Biotechnician Assistant credential from Biotility for successful completion of both the online and practical components of the exam. Schools may use the BACE for the end-of-program validation required by the Career and Professional Education (CAPE) Act.<br><br>
 The knowledge exam can be administered by an approved proctor via a computer-based online system. The practical exam assesses technical workplace skills, and is performed at an approved Exam Site under the observation of an approved Skills Evaluator. The BACE program and procedures are covered in this manual. It is critical that that Site Coordinators, Proctors, and Skills Evaluators implement the exam procedures as described to ensure the integrity of the exam and of student outcomes.
+                    </div>
+                    <div align="center">
+                    <a data-ui-sref="authentication.signup">
+    					<button class="btn btn-default top-50" >Get Started</button>
+					</a>
+                    </div>
             </div>
-            </div>
-            <div class="col-md-5">
-           		<img src="modules/core/client/img/stock/home.jpg" alt="" style="height: 280px;">
+            <div class="col-md-3">
+           		<img src="modules/core/client/img/stock/home.jpg" alt="" style="height: 150px;" class="image-center himg">
+                <img src="modules/core/client/img/stock/home2.jpg" alt="" style="height: 150px;" class="image-center himg">
+                <img src="modules/core/client/img/stock/home3.jpg" alt="" style="height: 150px;" class="image-center himg">
             </div>
         </div>
       </div>
